# whereismyjasper

./: .gitignore  context.md
.github/workflows/: ml-service-ci.yml
file_requested/: Resnet_Pretrained_Pytorch.ipynb
ml-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml  setup_structure.py
ml-service/ml_service/: __init__.py
ml-service/ml_service/api/: main.py
ml-service/ml_service/models/: classifier.py
ml-service/ml_service/training/: train.py
ml-service/tests/: conftest.py  test_api.py
